# discord-claude-bot

./: .env.example  .gitignore  LICENSE  README.ko.md  README.md  install.sh  kill.sh  main.py  notify.sh  pyproject.toml  run.sh  status.sh  stop.sh
data/: security.json  security.json.example
src/: config.py  logging_fmt.py
src/agent/: output_parser.py  permission.py  presets.py  runner.py  session.py
src/bot/: client.py  views.py
src/commands/: admin.py  finance.py  registry.py  status_cancel.py  task.py
src/security/: guard.py
